<resources>
    <string name="app_name">Assistance for Elderly</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="the_elderly_assistant">The Elderly Assistant</string>
    <string name="i_am_an_elderly">i am an elderly</string>
    <string name="i_am_a_volunteer">i am a volunteer</string>
    <string name="logo">logo</string>
    <string name="elderlyTitle">elderly person</string>
    <string name="volunteerTitle">volunteer</string>
    <string name="loginTitle">Login Screen</string>
    <string name="loginButton">Login</string>
    <string name="firstTimeUser">First-time User?</string>
    <string name="registerHere">Register Here</string>
    <string name="forgottenPassword">Forgotten Password?</string>
    <string name="clickHere">Click Here</string>
    <string name="userName">Username (e-mail)</string>
    <string name="password">Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="retypePassword">Re-type Password</string>
    <string name="confirmButton">Confirm</string>
    <string name="alreadyHaveAccount">Already have an account?</string>
    <string name="loginHere">Login Here</string>
    <string name="registrationTitle">Registration Screen</string>
    <string name="viewListOfVolunteerService">View List Of \nVolunteers\' Services</string>
    <string name="provideVolunteerFeedbackRatings">Provide Feedback &amp; \nRating for Service Obtained</string>
    <string name="homeScreenTitle">Home Screen</string>
    <string name="profileImage">Profile Image</string>
    <string name="logout">Logout</string>
    <string name="createPreferredServiceProfile">Create a Preferred Service Profile</string>
    <string name="createServiceProfile">Create Service \nProfile</string>
    <string name="serviceProfileDetails">Service Profile Details</string>
    <string name="editServiceProfile">Edit Service Profile</string>
    <string name="viewElderlyPersonRequest">View Elderly Request for Service</string>
    <string name="viewFeedback">View Feedback &amp; Rating</string>
    <string name="viewProvidedServices">View Provided\nService</string>
    <string name="volunteerName">Volunteer Name</string>
    <string name="volunteerMobile">+353243155255</string>
    <string name="briefServiceDescription">Brief Service Description</string>
    <string name="availableServices">Select Available Service</string>
    <string name="provideFeedbackForVolunteer">Provided \nFeedback &amp; Rating</string>
    <string name="emailMsgTitle">An e-mail with a link for Password Reset will be sent to your inbox</string>
    <string name="resetPassword">Reset Password</string>
    <string name="confirmReset">Confirm Reset</string>
    <string name="i_am_an_admin">I am an administrator</string>
    <string name="adminTitle">Administrator</string>
    <string name="description">Description</string>
    <string name="serviceTypeName">Service Type Name</string>
    <string name="serviceTypeTitle">Service Type</string>
    <string name="createServiceType">Create Service</string>
    <string name="newServiceTypeTitle">Add New</string>
    <string name="deleteServiceProfile">Delete Profile</string>
    <string name="deleteProfileButtonText">Delete</string>
    <string name="volunteerImage">Volunteer Photo</string>
    <string name="updateButtonText">Update</string>
    <string name="availableElderlyRequests">Available Elderly Requests</string>
    <string name="sendNotification">Send Notification</string>
    <string name="availableDays">Available days to provide service</string>
    <string name="timeOfDay">Time of days to provide service</string>
    <string name="availableTimeOfDays">Available time of days to take mobile calls</string>
    <string name="letterIcon">SA</string>
    <string name="elderlyDetails">Elderly Details</string>
    <string name="notificationToElderly">Send Notification to Elderly</string>
    <string name="request_details">Request Details</string>
    <string name="service_details">Service Details</string>
    <string name="notification_details">Notification Details</string>
    <string name="select_your_available_times">Select your available times</string>
    <string name="select_your_available_days">Select your available days</string>
    <string name="select_time_on_days_for_service_provision">Select time on days for service provision</string>
    <string name="select_days_for_service_provision">Select days for service provision</string>
    <string name="select_available_times_of_days_for_calls">Select available times for calls on the days for service</string>
    <string name="send_request">Send Request</string>
    <string name="feedback_from_elderly">Feedback From Elderly</string>
    <string name="times_for_telephone_calls">Times for Telephone Calls</string>
    <string name="times_to_provide_service">Times to Provide Service</string>

    <array name="materialColors">
        <item>#1509ed</item>
        <item>#32a852</item>
        <item>#f51d05</item>
        <item>#e807b4</item>
        <item>#c90450</item>
        <item>#8704c9</item>
        <item>#04c99b</item>
        <item>#1ec904</item>
        <item>#c96a04</item>
        <item>#0679b8</item>
    </array>
    <string-array name="availableDays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="systemLocalTime">
        <item>09h00–10h00</item>
        <item>10h00–11h00</item>
        <item>11h00–12h00</item>
        <item>12h00–13h00</item>
        <item>13h00–14h00</item>
        <item>14h00–15h00</item>
        <item>15h00–16h00</item>
        <item>16h00–17h00</item>
        <item>17h00–18h00</item>
        <item>18h00–19h00</item>
        <item>20h00–21h00</item>
        <item>21h00–22h00</item>
    </string-array>
    <string-array name="availableTimes">
        <item>09h00-</item>
        <item>09h30</item>
        <item>10h00</item>
        <item>10h30</item>
        <item>11h00</item>
        <item>11h30</item>
        <item>12h00</item>
        <item>12h30</item>
        <item>13h00</item>
        <item>13h30</item>
        <item>14h00</item>
        <item>14h30</item>
        <item>15h00</item>
        <item>15h30</item>
        <item>16h00</item>
        <item>16h30</item>
        <item>17h00</item>
        <item>17h30</item>
        <item>18h00</item>
        <item>18h30</item>
        <item>19h00</item>
        <item>19h30</item>
        <item>20h00</item>
        <item>20h30</item>
        <item>21h00</item>
        <item>21h30</item>
        <item>22h00</item>
    </string-array>
    <string-array name="volunteers">
        <item>Bismark Atta</item>
        <item>Adu Addo</item>
        <item>Abena Serwaah</item>
        <item>Nana Akua</item>
        <item>Margaret Maggie</item>
        <item>Kofi Owusu</item>
        <item>Diana Domfeh Frimpong</item>
    </string-array>
    <string-array name="descriptions">
        <item>Walking a dog to the park</item>
        <item>Cleaning the house and clearing the bins</item>
        <item>Wednesday is wednesday</item>
        <item>Thursday is thurs</item>
        <item>Friday is friday</item>
        <item>Saturday is saturday</item>
        <item>Sunday is sunday</item>
    </string-array>
    <string-array name="mobileNumbers">
        <item>0244692697</item>
        <item>0242969697</item>
        <item>+33771727909</item>
        <item>0243861079</item>
        <item>+33752562130</item>
        <item>0201234567</item>
        <item>0244123145</item>
    </string-array>
    <string-array name="serviceTypeIDs">
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
        <item>700</item>
        <item>800</item>
        <item>900</item>
        <item>1000</item>
        <item>1100</item>
    </string-array>
    <string-array name="serviceTypes">
        <item>To teach you how to use a mobile phone/tablet/laptop</item>
        <item>To teach you how to use mobile/web applications</item>
        <item>To walk with you in a park</item>
        <item>To provide lift to social event</item>
        <item>To assist you with house cleaning</item>
        <item>To assist you with house maintenance (if certified in a trade (painting, electrical, plumbing, carpentry, etc.))</item>
        <item>To assist you with gardening</item>
        <item>To assist you with errands</item>
        <item>To do grocery shopping for you</item>
        <item>To provide lift to shops</item>
        <item>To take care of your pet(s) (walking dogs outside)</item>
    </string-array>
    <string-array name="irishNumberPrefixes">
        <item>083</item>
        <item>084</item>
        <item>085</item>
        <item>086</item>
        <item>087</item>
        <item>088</item>
        <item>089</item>
    </string-array>
</resources>