<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#774F8A8B"
    tools:context=".views.PasswordResetActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="74dp"
        android:layout_height="81dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_myplaces"
        tools:srcCompat="@android:drawable/ic_menu_myplaces" />

    <TextView
        android:id="@+id/pageHeaderTitle"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/resetPassword"
        android:textAllCaps="true"
        android:textColor="#4F8A8B"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:autofillHints="@string/userName"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/userName"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pageHeaderTitle" />

    <TextView
        android:id="@+id/emailMsgTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center_horizontal"
        android:text="@string/emailMsgTitle"
        android:textColor="#C13E4449"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/btnPasswordReset"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="#4f8a8b"
        android:gravity="center"
        android:text="@string/confirmReset"
        android:textColor="#222831"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailMsgTitle" />

    <TextView
        android:id="@+id/resetPasswordLink"
        android:layout_width="111dp"
        android:layout_height="24dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/loginHere"
        android:textColor="#222831"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgottenPasswordTitle" />

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/registerHere"
        android:textColor="#222831"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstTimeUserTitle" />

    <TextView
        android:id="@+id/forgottenPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="37dp"
        android:gravity="center_horizontal"
        android:text="@string/alreadyHaveAccount"
        android:textColor="#C13E4449"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerLink" />

    <TextView
        android:id="@+id/firstTimeUserTitle"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="32dp"
        android:text="@string/firstTimeUser"
        android:textColor="#C13E4449"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPasswordReset" />

</androidx.constraintlayout.widget.ConstraintLayout>